--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,237 @@
-.App {
-  text-align: center;
+.wrapper {
+    text-align: center;
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper h2 {
+    margin: 20px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper .wr-row {
+    padding: 0 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (max-width: 1100px) {
+    .wrapper .wr-row {
+        padding: 0 25px 0 55px;
+    }
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 768px) {
+    .wrapper .wr-row {
+        padding: 0 20px 0 55px;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 375px) {
+    .wrapper .wr-row {
+        padding: 0 15px 0 55px;
+    }
+}
+.wrapper .wr-row .schedule-table {
+    position: relative;
+    margin: 30px auto 100px;
+    max-width: 900px;
+}
+.wrapper .wr-row .schedule-table table {
+    width: 100%;
+}
+.wrapper .wr-row .schedule-table table, .wrapper .wr-row .schedule-table th, .wrapper .wr-row .schedule-table td {
+    border-bottom: 1px solid #dadce0;
+    border-collapse: collapse;
+    padding: 0;
+    text-align: left;
+    font-size: 12px;
+    line-height: 1.3;
+    color: rgba(32, 33, 36, 0.8);
+}
+
+.wrapper .wr-row .schedule-table th, .wrapper .wr-row .schedule-table td {
+    height: 40px;
+}
+
+.wrapper .wr-row .schedule-table thead tr th {
+    position: relative;
+    height: 30px;
+}
+
+.wrapper .wr-row .schedule-table thead .date {
+    position: absolute;
+    color: rgba(32, 33, 36, 0.8);
+    font-size: 13px;
+    bottom: 10px;
+}
+
+.wrapper .wr-row .schedule-table table th:first-child, .wrapper .wr-row .schedule-table table td:first-child {
+    position: relative;
+    width: 12px;
+    text-align: right;
+    border-right: 1px solid #dadce0;
+}
+
+.wrapper .wr-row .schedule-table .td-hours {
+    position: absolute;
+    top: -7px;
+    width: 70px;
+    right: 20px;
+}
+
+.wrapper .wr-row .schedule-table table th:last-child {
+    padding-left: 12px;
+}
+
+.wrapper .wr-row .schedule-table table td:last-child {
+    background-color: #f6f6f7;
+}
+
+.wrapper .wr-row .schedule-table tbody tr:last-child td:first-child {
+    height: 12px;
+}
+
+.wrapper .wr-row .schedule-table tbody tr:last-child td:last-child {
+    background-color: #fff;
+    border: 1px solid #fff;
+    height: 12px;
+}
+
+.wrapper .wr-row .schedule-table table tbody tr:last-child td:first-child {
+    border-bottom: 1px solid #fff;
+}
+
+.wrapper .wr-row .schedule-table .events-container {
+    position: absolute;
+    left: 13px;
+    top: 30px;
+    width: 100%;
+}
+
+.wrapper .wr-row .schedule-table .events-container .event-block {
+    position: absolute;
+    width: 98%;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background-color: #d7dbef;
+    border: 1px solid #bcc3e5;
+    padding: 0 10px;
+    line-height: 1.3;
+    color: rgba(32, 33, 36, 0.8);
+    text-align: left;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.wrapper .wr-row .schedule-table .events-container .event-block:hover {
+    background-color: #e2e5f3;
+}
+
+@media screen and (max-width: 767px) {
+    .wrapper .wr-row .schedule-table .events-container .event-block {
+        width: 94%;
+        padding: 0 8px;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .wrapper .wr-row .schedule-table .events-container .event-block {
+        padding: 0 7px;
+    }
+}
+
+.wrapper .wr-row .schedule-table .events-container .event-block .event-title {
+    font-size: 13px;
+    font-weight: bold;
+    margin-right: 7px;
+}
+
+@media screen and (max-width: 330px) {
+    .wrapper .wr-row .schedule-table .events-container .event-block .event-title {
+        margin-right: 6px;
+    }
+}
+
+.wrapper .wr-row .schedule-table .events-container .event-block .event-time {
+    font-size: 12px;
+}
+
+/*----- Project Modal Box -----*/
+.modal-box {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: flex-start;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    z-index: 1000;
+    padding: 25px 15px;
+}
+
+.modal-box .modal-content {
+    position: relative;
+    margin: 0 auto;
+    padding: 30px;
+    width: 90%;
+    max-width: 500px;
+    font-size: 14px;
+    background: #fff;
+    background-clip: padding-box;
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    transition: opacity 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+    .modal-box .modal-content {
+        padding: 20px 15px;
+        width: 95%;
+        box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.15);
+    }
+}
+
+.modal-box .modal-content .close-btn {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    font-size: 28px;
+    color: #3c4043;
+    padding: 0;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
+    line-height: 39px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.modal-box .modal-content .close-btn:hover {
+    background-color: #f6f6f7;
+}
+
+.modal-box .modal-content .modal-event-title {
+    margin: 5px auto;
+    font-size: 20px;
+}
+
+.modal-box .modal-content .modal-event-time {
+    margin-bottom: 10px;
+    font-size: 13px;
+}
+
+.modal-box .modal-content .modal-event-address {
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.modal-box .modal-content .more-info {
+    margin: 20px auto 15px;
+}
+
+.modal-box .modal-content .more-info p {
+    margin-bottom: 10px;
 }
